--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9851,6 +9851,14 @@ video {
   transition-delay: 1000ms;
 }
 
+.debug01 {
+  border: 1px solid red;
+}
+
+.debug02 {
+  border: 1px solid green;
+}
+
 .theme-light {
   --bg-background-primary: white;
   --bg-background-secondary: #f7fafc;
