--- a/frontend/src/assets/css/main.css
+++ b/frontend/src/assets/css/main.css
@@ -12,6 +12,18 @@
     border: 1px solid green;
 }
 
+.debug03 {
+    border: 1px solid orange;
+}
+
+.debug04 {
+    border: 1px solid dodgerblue;
+}
+
+.debug05 {
+    border: 1px solid deeppink;
+}
+
 .theme-light {
     --bg-background-primary: white;
     --bg-background-secondary: #f7fafc;
@@ -79,23 +91,7 @@ nav .active {
     padding-right: 1rem;
 }
 
-@media (min-width: 640px) {
-    .container-inner {
-        max-width: 640px;
-    }
-}
 
-@media (min-width: 768px) {
-    .container-inner {
-        max-width: 768px;
-    }
-}
-
-@media (min-width: 1024px) {
-    .container-inner {
-        max-width: 800px;
-    }
-}
 
 .checkmark {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg%20width%3D%2229%22%20height%3D%2229%22%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%3E%3Cpath%20d%3D%22M4.427%2024.93A14.5%2014.5%200%201%201%2024.93%204.427c5.495%205.69%205.416%2014.733-.177%2020.326s-14.637%205.672-20.326.177z%22%20fill%3D%22%232E855A%22/%3E%3Cpath%20fill%3D%22%23FFF%22%20d%3D%22M10.234%2012.803l3.67%203.253L20.766%2010%2023%2012l-9.096%208L8%2014.789l2.234-2z%22/%3E%3C/svg%3E");
@@ -116,4 +112,60 @@ nav .active {
     width: 100%;
     height: 100%;
     border: 0;
+}
+
+.sidebar-section-01 {
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
+    overflow-y: scroll;
+    height: 67vh;
+}
+
+.sidebar-section-01::-webkit-scrollbar {
+    width: 5px;
+}
+
+.sidebar-section-01::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(255,255,255,0.3);
+    border-radius: 10px;
+}
+
+.sidebar-section-01::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(255,255,255,0.5);
+}
+
+.sidebar-section-02 {
+    min-height: 10vh;
+}
+
+.border-section-title {
+    z-index: 20;
+    display: inline-block;
+    position: absolute;
+    top: -20px;
+}
+
+@media (min-width: 640px) {
+    .sidebar-section-01 {
+        height: 80vh;
+    }
+
+    .container-inner {
+        max-width: 640px;
+    }
+}
+
+@media (min-width: 768px) {
+
+    .container-inner {
+        max-width: 768px;
+    }
+}
+
+@media (min-width: 1024px) {
+    .container-inner {
+        max-width: 800px;
+    }
 }
